--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Heading</title>
+    <title>Test Heading Bug Fixed Now</title>
 </head>
 <body>
     <h1>Feature 1 created in this page</h1>
