--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Test Heading Bug Fixed Now</title>
 </head>
 <body>
-    <h1>Feature 1 created in this page</h1>
+    <h1 style="color: red;">Feature 1 created in this page</h1>
     <h2>This is 2nd heading</h2>
 </body>
 </html>
