all set for coloring

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1 style="color: red;">Feature 1 created in this page</h1>
-    <h2>This is 2nd heading</h2>
+    <h2 style="color:aqua">This is 2nd heading</h2>
 </body>
 </html>
