--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Feature 1 created in this page</h1>
     <h3 style="color:aqua">This is 2nd heading</h3>
+    <p>Commited from Github</p>
 </body>
 </html>
