--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Feature 1 created in this page</h1>
     <h3 style="color:aqua">This is 2nd heading</h3>
     <p>Commited from Github</p>
+    <div><li>Home<li></div>
 </body>
 </html>
