--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Feature 1 created in this page</h1>
-    <h3 style="color:aqua">This is 2nd heading</h3>
+    <h3 style="color:aqua">This is 2nd headindsdg</h3>
     <p>Commited from Github</p>
 </body>
 </html>
