--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Commited from Github</p>
     <div><li>Home<li></div>
         <div class="container">
-            <h1>this is kushagra feature</h1>
+            <h1>this is kushagra feature by me </h1>
         </div>
 </body>
 </html>
