--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
         <div class="container">
             <h1>this is kushagra feature</h1>
         </div>
+        <div>
+        <p>
+            new f
+        </p>
+
+        </div>
 </body>
 </html>
