--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
             <em>Team mamber add 2 new feature</em>
         </div>
 
-        <p>New branch data is here 1</p>
+        <p>New branch data is here 1 2</p>
 </body>
 </html>
