--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div>
         <p>
-            new f
+            new featuress
         </p>
         <em>Team mamber aad new feature</em>
             <em>Team mamber add 2 new feature</em>
