--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <em>Team mamber add 2 new feature</em>
         </div>
 
-        <p>New branch data is here 1 2</p>
-            <trial branch for check git pull hbhubujefg>
+        <!-- <p>New branch data is here 1 2</p> -->
+            <!-- <trial branch for check git pull hbhubujefg> -->
 </body>
 </html>
